--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,53 +1,74 @@
 <div class="wrapper">
-  <footer class="bg-dark text-white text-center py-4">
+  <footer class="bg-dark text-white">
     <div class="container">
-      <section class="mb-4">
-        <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://www.facebook.com/" role="button">
-          <i class="bi bi-facebook bi-lg"></i>
-        </a>
-        <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://web.whatsapp.com/" role="button">
-          <i class="bi bi-whatsapp bi-lg"></i>
-        </a>
-        <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://www.youtube.com/" role="button">
-          <i class="bi bi-youtube bi-lg"></i>
-        </a>
-      </section>
 
-      <section class="mb-4">
-        <p>{{'InfoF2' | translate}}</p>
-      </section>
+      <div class="footer-top row">
 
-      <section class="mb-4">
-        <div class="row">
-          <div class="col-md-6 text-md-end">
-            <button type="button" class="btn btn-outline-success" routerLink="/Singup">{{'InfoF3' | translate}}</button>
-          </div>
-          <div class="col-md-6 text-md-start">
-            <button type="button" class="btn btn-outline-success" routerLink="/Login">{{'InfoF4' | translate}}</button>
+        <div class="footer-col col-md-4">
+          <h5>Contacto</h5>
+          <ul class="contact-info">
+            <p><i class="bi bi-geo-alt"></i> Calle Ejemplo 123, Ciudad, País</p>
+          <p><i class="bi bi-clock"></i> Lunes a Viernes: 9:00 AM - 6:00 PM</p>
+
+          <p><i class="bi bi-telephone"></i> +1 234 567 890</p>
+          <p><i class="bi bi-envelope"></i> contacto&#64;webhistoria.com</p>
+            <li class="social-icons">
+              <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://www.facebook.com/" role="button" title="Facebook">
+                <i class="bi bi-facebook"></i>
+              </a>
+              <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://web.whatsapp.com/" role="button" title="WhatsApp">
+                <i class="bi bi-whatsapp"></i>
+              </a>
+              <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://www.youtube.com/" role="button" title="YouTube">
+                <i class="bi bi-youtube"></i>
+              </a>
+              <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://www.linkedin.com/" role="button" title="LinkedIn">
+                <i class="bi bi-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+
+        <div class="footer-col col-md-4 quick-links">
+          <h5>Enlaces rápidos</h5>
+          <ul>
+            <li><a href="/sobre-nosotros"><i class="bi bi-person"></i> Sobre mí</a></li>
+            <li><a href="/blog"><i class="bi bi-journal-text"></i> Blog</a></li>
+            <li><a href="/servicios"><i class="bi bi-gear"></i> Servicios</a></li>
+            <li><a href="/faq"><i class="bi bi-question-circle"></i> Preguntas frecuentes</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col col-md-4">
+          <h5>Mantente informado</h5>
+          <form class="newsletter-form">
+            <div class="input-group mb-3">
+              <input type="email" class="form-control" placeholder="Tu correo electrónico" aria-label="Email" required>
+              <button class="btn btn-subscribe" type="submit">Suscribirse</button>
+            </div>
+          </form>
+
+          <div class="footer-buttons">
+            <button type="button" class="btn btn-action" routerLink="/Singup">{{'InfoF3' | translate}}</button>
+            <button type="button" class="btn btn-action" routerLink="/Login">{{'InfoF4' | translate}}</button>
           </div>
         </div>
-      </section>
+      </div>
 
-      <section class="mb-4">
-        <h5>Contacto</h5>
-        <p>¿Tienes alguna pregunta? No dudes en contactarme.</p>
-      </section>
 
-      <section class="mb-4">
-        <a href="/sobre-nosotros" class="text-light me-3">Sobre mi</a>
-        <a href="/politica-privacidad" class="text-light me-3">Política de privacidad</a>
-        <a href="/terminos-uso" class="text-light">Términos de uso</a>
-      </section>
-
-      <section class="mb-4">
-        <p *ngFor="let parrafo of Parrafos">
-          {{ parrafo.path }}
-        </p>
-      </section>
+      <div class="footer-middle text-center py-3">
+        <a href="/politica-privacidad" class="text-light mx-2">Política de privacidad</a>
+        <a href="/terminos-uso" class="text-light mx-2">Términos de uso</a>
+        <a href="/aviso-legal" class="text-light mx-2">Aviso legal</a>
+        <a href="/mapa-sitio" class="text-light mx-2">Mapa del sitio</a>
+      </div>
     </div>
 
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-      Copyright © {{ currentYear }} Web Historia. Todos los derechos reservados.
+
+    <div class="footer-bottom text-center p-3">
+      <p class="mb-0">{{'InfoF2' | translate}}</p>
+      <p class="mb-0">Copyright © {{ currentYear }} Web Historia. Todos los derechos reservados.</p>
     </div>
   </footer>
 </div>
